<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_1"
        app:layout_constraintTop_toTopOf="@+id/topGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity2Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_2"
        app:layout_constraintTop_toBottomOf="@+id/activity1Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity3Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_3"
        app:layout_constraintTop_toBottomOf="@+id/activity2Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity4Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity4Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/activity_4"
        app:layout_constraintTop_toBottomOf="@+id/activity3Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity5Button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity5Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_5"
        app:layout_constraintTop_toBottomOf="@+id/activity4Button"
        app:layout_constraintBottom_toTopOf="@+id/activity6Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activity6Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_6"
        app:layout_constraintTop_toBottomOf="@+id/activity5Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>